--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.4.2",
     "react": "19.1.0",
     "react-countup": "^6.5.3",
+    "react-device-detect": "^2.2.3",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
