--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.4.6",
     "lenis": "^1.3.8",
     "next": "15.4.2",
+    "next-sitemap": "^4.2.3",
     "react": "19.1.0",
     "react-countup": "^6.5.3",
     "react-device-detect": "^2.2.3",
